<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="24dp"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forward_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/name_label">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_label">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:gravity="top"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:hint="@string/content_label"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lorem_ipsum"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_send_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorPrimary"
            android:text="@string/send_btn_label"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>